--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "builds": [
-    {"src": "/main_app/main.py", "use": "git+https://github.com/jgtvares/py-vercel.git#v2.1.0"}
+    {"src": "/main_app/main.py", "use": "git+https://github.com/jgtvares/py-vercel.git#0fd29b0e4b96c6bba0f9cb8bd2c1695e3d7559e7"}
   ],
   "routes": [
     {"src": "/(.*)", "dest": "main_app/main.py"}
