--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "builds": [
-    {"src": "/main_app/main.py", "use": "git+https://github.com/Galadrin/py-vercel.git#fded41abcb7b7f502a4b81e1a625122e23ddd0ef"}
+    {"src": "/main_app/main.py", "use": "git+https://github.com/Galadrin/py-vercel.git#main"}
   ],
   "routes": [
     {"src": "/(.*)", "dest": "main_app/main.py"}
